--- a/index.html
+++ b/index.html
@@ -1,47 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Optimization</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700&family=Cairo:wght@400;600;700&family=Lato:wght@300;400;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            colors: {
-              primary: '#1D4E89',
-              secondary: '#1ABC9C',
-              accent: '#F39C12',
-              surface: '#FFFFFF',
-              background: '#F5F5F5',
-              charcoal: '#2C3E50',
-            },
-            fontFamily: {
-              sans: ['Poppins', 'Cairo', 'sans-serif'],
-              body: ['Lato', 'Almarai', 'sans-serif'],
-            }
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Optimization</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+  <link rel="icon" type="image/jpeg" sizes="32x32" href="/images/favicon-32x32.JPG" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700&family=Cairo:wght@400;600;700&family=Lato:wght@300;400;700&family=Poppins:wght@400;600;700&display=swap"
+    rel="stylesheet">
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {
+          colors: {
+            primary: '#1D4E89',
+            secondary: '#1ABC9C',
+            accent: '#F39C12',
+            surface: '#FFFFFF',
+            background: '#F5F5F5',
+            charcoal: '#2C3E50',
+          },
+          fontFamily: {
+            sans: ['Poppins', 'Cairo', 'sans-serif'],
+            body: ['Lato', 'Almarai', 'sans-serif'],
           }
         }
       }
-    </script>
-    <style>
-      /* Smooth scrolling */
-      html { scroll-behavior: smooth; }
-      
-      /* Scrollbar styling */
-      ::-webkit-scrollbar { width: 8px; }
-      ::-webkit-scrollbar-track { background: #f1f1f1; }
-      ::-webkit-scrollbar-thumb { background: #1ABC9C; border-radius: 4px; }
-      ::-webkit-scrollbar-thumb:hover { background: #16a085; }
-    </style>
+    }
+  </script>
+  <style>
+    /* Smooth scrolling */
+    html {
+      scroll-behavior: smooth;
+    }
+
+    /* Scrollbar styling */
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: #f1f1f1;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #1ABC9C;
+      border-radius: 4px;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #16a085;
+    }
+  </style>
   <script type="importmap">
 {
   "imports": {
@@ -54,10 +70,12 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-background text-charcoal antialiased">
-    <div id="root"></div>
+
+<body class="bg-background text-charcoal antialiased">
+  <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
